argocd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    external.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: external
  rules:
  - host: argo.chalk-ho.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server-cilium
            port:
              name: https
  tls:
  - hosts:
    - argo.chalk-ho.me
    secretName: argocd-chalk-ho-me-cert # as expected by argocd-server
